crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_and.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
