crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_not_in.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 1,
        "Title": "For Those About To Rock We Salute You"
      },
      {
        "AlbumId": 3,
        "Title": "Permanent Vacation"
      },
      {
        "AlbumId": 5,
        "Title": "Facelift"
      },
      {
        "AlbumId": 2,
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": 4,
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
